--- a/estilos.css
+++ b/estilos.css
@@ -50,3 +50,50 @@
     clear: both;
     display: table;
 }
+
+.coral{
+    background-color: lightcoral;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.p1{
+    padding: 1em;
+}
+
+.text-white{
+  color: white;
+}
+
+.text-title{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    
+}
+
+.bc-r{
+    background-color: crimson;
+}
+.bc-m{
+    background-color: purple;
+}
+
+.bc-az{
+    background-color: blue;
+}
+.bc-v{
+    background-color: green;
+}
+.bc-am{
+    background-color: yellow;
+}
+.bc-n{
+    background-color: orange;
+}
+
+.text-font{
+   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
