--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,9 @@
-/*.col-1{width: 8.33%;}
+* { box-sizing: border-box; }
+
+.col-1{width: 8.33%;}
 .col-2{width: 16.66%;}
 .col-3{width: 25%;}
-.col-4{width: 33.33%}
+.col-4{width: 33.33%;}
 .col-5{width: 41.66%;}
 .col-6{width: 50%;}
 .col-7{width: 58.33%;}
@@ -9,7 +11,7 @@
 .col-9{width: 75%;}
 .col-10{width: 83.33%;}
 .col-11{width: 91.66%;}
-.col-12{width: 100%;}*/
+.col-12{width: 100%;}
 
 @media (min-width: 0px){
     .col-s-1{width: 8.33%;}
@@ -41,9 +43,7 @@
     .col-m-12{width: 100%;}
 }
 
-[class*="col-"]{
-    float: left;
-}
+[class*="col-"] { float: left; }
 
 .row::after{
     content: "";
